backend/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: inventory-app
      tier: backend
      track: stable
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: inventory-app
        tier: backend
        track: stable
    spec:
      containers:
      - name: inventory-app-api
        image: "571372182587.dkr.ecr.us-east-1.amazonaws.com/prod/inventory-app-backend:latest"
        imagePullPolicy: Always
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "400Mi"
            cpu: "300m"
        ports:
        - name: http
          containerPort: 8080
