backend/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: inventory-app
    tier: backend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8080
